--- a/app/views/sections/_header.html.haml
+++ b/app/views/sections/_header.html.haml
@@ -9,7 +9,9 @@
   - files = Dir.glob("#{Rails.root}/public/images/banner/#{master? ? "master" : "main"}/*").sort
   - files = files.sort_by { rand } # randomize
   - files = files[0..6] # limit
-  - files.each do |file|
-    = image_tag file.gsub("#{Rails.root}/public", '')#, class: "first"
+  - files.each_with_index do |file, idx|
+    - options = {}
+    - options[:class] = "first" if idx == 0
+    = image_tag file.gsub("#{Rails.root}/public", ''), options
     -# image_tag "banner/2.png"#, class: "last"
 .clear
