--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -288,7 +288,10 @@ a#profile_name {
   #banner img {
     -moz-box-shadow: 0px -3px 10px #333333;
     -webkit-box-shadow: 0px -3px 10px #333333;
-    box-shadow: 0px -3px 10px #333333; }
+    box-shadow: 0px -3px 10px #333333;
+    display: none; }
+  #banner img.first {
+    display: block; }
 
 .center {
   text-align: center; }
