--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -391,6 +391,10 @@ a#profile_name
   z-index: 1
   img
     +box-shadow(0px, -3px, 10px, #333)
+    display: none
+  img.first
+    display: block
+    
     
 // webkit only banner gallery
 //
