--- a/app/views/forms/_borse_di_studio.html.haml
+++ b/app/views/forms/_borse_di_studio.html.haml
@@ -13,9 +13,10 @@
       = f.label :last_name, tf("Cognome", "Surname")
       = f.text_field :last_name
       = f.label :email, "Email"
-      = f.text_field :email      
-      = f.label :password, tf("Scegli una password", "Choose a password")
-      = f.password_field :password
+      = f.text_field :email 
+      - unless logged_in?     
+        = f.label :password, tf("Scegli una password", "Choose a password")
+        = f.password_field :password
       = f.label :birthplace, tf("Nato a", "Born in")
       = f.text_field :birthplace 
       = f.label :birthdate, tf("Data", "Birth date")    
