--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -361,6 +361,7 @@ div#home_swf {
       border: 1px solid #871623;
       border-top: 1px solid #c82d5e;
       border-bottom: 1px solid #c82d5e;
+      width: 84%;
       width: 83%;
       text-align: right; }
   #nav li .subnav {
@@ -801,3 +802,10 @@ input.radio2 {
   font-weight: bold;
   font-size: 0.9em;
   margin: 10px 0 3px; }
+
+form label.error {
+  margin-bottom: 10px;
+  color: #dd0000;
+  display: block;
+  position: relative;
+  top: -5px; }
