--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     %meta{ name: 'csrf-token', content: form_authenticity_token}/
     %meta{ name: 'csrf-param', content: 'authenticity_token'}/
     = stylesheet_link_tag "main", 'fancybox'#, :cache =>  "cache/all"       
-    = javascript_include_tag "jquery", "jquery-cycle", "jquery-swfobject", "jquery-hoverintent","jquery-flickr", "jquery-mousewheel", "jquery-fancybox", "rails", "master"#, :cache => "cache/all" 
+    = javascript_include_tag "jquery", "jquery-cycle", "jquery-swfobject", "jquery-hoverintent","jquery-flickr", "jquery-mousewheel", "jquery-fancybox", "jquery-validation", "rails", "master"#, :cache => "cache/all" 
     = yield :head
     %script{ type: "text/javascript" }
       var action = '#{controller.action_name}'
