--- a/app/views/user_mailer/admin_borsa.haml
+++ b/app/views/user_mailer/admin_borsa.haml
@@ -1,5 +1,49 @@
-%img{ src: "/images/logo" }
+%img{ src: "http://accademia-cappiello.it/images/logo.png" }
 
-%h2 Nuova richiesta Borsa di studio
+%h2 Nuova richiesta Borsa di studio:
 
-%p Nome:
+%p.tit Nome: 
+%p.val= @user.name
+
+%p.tit Email: 
+%p.val= @user.email
+
+%p.tit Lingua: 
+%p.val= @user.lang
+
+%p.tit Nato a: 
+%p.val= @user.birthplace
+
+%p.tit Il: 
+%p.val= @user.birthdate
+
+%p.tit Indirizzo: 
+%p.val= @user.address
+
+%p.tit Città: 
+%p.val= @user.city
+
+%p.tit CAP: 
+%p.val= @user.cap
+
+%p.tit Telefono: 
+%p.val= @user.tel
+
+%p.tit Newsletter: 
+%p.val= @user.newsletter
+
+%p.tit Titolo di studio: 
+%p.val= @user.qualification
+
+%p.tit Votazione: 
+%p.val= @user.grade
+
+%p.tit Attuale occupazione:
+%p.val= @user.job
+
+
+- infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"]
+
+- 5.times do |i|
+  %p.tit #{infos[i]}: 
+  %p.val= @user.send "info#{i}"
