--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -3,6 +3,7 @@
 .forms_form
   - form_for @user do |f|
     = hidden_field_tag "form", "form"
+    = f.hidden_field :tmp_form, value: "form"
     .checkboxes
       %h3= tf("RICHIESTA INFORMAZIONI", "INFORMATION REQUEST")
       = f.check_box :int_annuali_visual
