--- a/app/views/user_mailer/admin_borsa.haml
+++ b/app/views/user_mailer/admin_borsa.haml
@@ -1,4 +1,16 @@
-%img{ src: "http://accademia-cappiello.it/images/logo.png" }
+%style{ type: "text/css" }
+  :plain
+    p.val {
+      float: left;
+      margin-left: 10px;
+      font-weight: bold;
+    }
+    p.tit {
+      float: left;
+      clear: left;
+    }
+    
+%img{ src: "http://accademia-cappiello.it/images/logo_small.png" }
 
 %h2 Nuova richiesta Borsa di studio:
 
