--- a/app/views/forms/_pdf.html.haml
+++ b/app/views/forms/_pdf.html.haml
@@ -21,6 +21,7 @@
 
     - form_for @user, html: { style: "display: none" } do |f|
       = f.hidden_field :tmp_form, value: "pdf"
+      = f.hidden_field :tmp_form_pdf, value: pdf_name
       .row
         %p
           = tf "Se sei già registrato", "If you are already registered"
