--- a/app/views/user_mailer/admin_borsa.haml
+++ b/app/views/user_mailer/admin_borsa.haml
@@ -1,61 +1,50 @@
-%style{ type: "text/css" }
-  :plain
-    p.val {
-      float: left;
-      margin-left: 10px;
-      font-weight: bold;
-    }
-    p.tit {
-      float: left;
-      clear: left;
-    }
+= render partial: "style"
     
-%img{ src: "http://accademia-cappiello.it/images/logo_small.png" }
+#container
+  %img.logo{ src: "http://accademia-cappiello.it/images/logo_small.png" }
 
-%h2 Nuova richiesta Borsa di studio:
+  %h2 Nuova richiesta Borsa di studio:
 
-%p.tit Nome: 
-%p.val= @user.name
+  %p.tit Nome: 
+  %p.val= @user.name
 
-%p.tit Email: 
-%p.val= @user.email
+  %p.tit Email: 
+  %p.val= @user.email
 
-%p.tit Lingua: 
-%p.val= @user.lang
+  %p.tit Lingua: 
+  %p.val= @user.lang
 
-%p.tit Nato a: 
-%p.val= @user.birthplace
+  %p.tit Indirizzo: 
+  %p.val= @user.address
 
-%p.tit Il: 
-%p.val= @user.birthdate
+  %p.tit Città: 
+  %p.val= @user.city
 
-%p.tit Indirizzo: 
-%p.val= @user.address
+  %p.tit CAP: 
+  %p.val= @user.cap
 
-%p.tit Città: 
-%p.val= @user.city
+  %p.tit Telefono: 
+  %p.val= @user.tel
+  
 
-%p.tit CAP: 
-%p.val= @user.cap
+  %p.tit Nato a: 
+  %p.val= @user.birthplace
 
-%p.tit Telefono: 
-%p.val= @user.tel
+  %p.tit Il: 
+  %p.val= @user.birthdate
+  
+  %p.tit Titolo di studio: 
+  %p.val= @user.qualification
 
-%p.tit Newsletter: 
-%p.val= @user.newsletter
+  %p.tit Votazione: 
+  %p.val= @user.grade
+  
+  %p.tit Note: 
+  %p.val= @user.notes
 
-%p.tit Titolo di studio: 
-%p.val= @user.qualification
+  
+  %p.tit Newsletter: 
+  %p.val= @user.newsletter
 
-%p.tit Votazione: 
-%p.val= @user.grade
-
-%p.tit Attuale occupazione:
-%p.val= @user.job
-
-
-- infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"]
-
-- 5.times do |i|
-  %p.tit #{infos[i]}: 
-  %p.val= @user.send "info#{i}"
+      
+  .clear
