--- a/app/views/user_mailer/_style.haml
+++ b/app/views/user_mailer/_style.haml
@@ -16,7 +16,7 @@
     
     body {
       background: #EEEEEE;
-      
+      height: 100%;
       padding: 20px;
     }
     
@@ -25,10 +25,11 @@
       padding: 20px;
       width: 80%;
       margin: 0 auto;
+      height: 100%;
     }
 
     .clear {
-      clear: both;
+      clear: left;
     }
     
     img.logo {
