--- a/app/views/user_mailer/admin_form.haml
+++ b/app/views/user_mailer/admin_form.haml
@@ -22,7 +22,9 @@
   %p.val= @user.birthplace
 
   %p.tit Il: 
-  %p.val= @user.birthdate
+  %p.val
+    - unless @user.birthdate.nil?
+      = I18n.l @user.birthdate, format: :long 
 
   %p.tit Indirizzo: 
   %p.val= @user.address
