--- a/app/views/sections/_login.html.haml
+++ b/app/views/sections/_login.html.haml
@@ -22,6 +22,7 @@
           - if admin?
             = link_to "Utenti", [:users]
             = link_to "Carica foto", [:new_photo]
+            = link_to "Statistiche", [:stats]
           = lang_link
           = link_to "Logout", "/logout"
     .center
