redirect without www

--- a/app/views/pages/stats.html.haml
+++ b/app/views/pages/stats.html.haml
@@ -8,4 +8,6 @@
 
   %li= link_to "mixpanel - Registration Funnels", "http://mixpanel.com/report/15577/funnels"
 
+  %li= link_to "trends", "http://trends.makevoid.com/domains/2"
+  
   %li= link_to "Webmaster Tools", "https://www.google.com/webmasters/tools/internal-links?hl=en&siteUrl=http://accademia-cappiello.it/"
