--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,6 +32,7 @@
         });
         setTimeout(hide_flashes, 3000)
       });
+        
     - if Rails.env == "production" && !analytics_tracker.blank?
       = render partial: "layouts/analytics"
   %body{ class: "#{controller.controller_name} #{controller.action_name} #{"master" if master?} #{"admin" if admin?}"}
@@ -70,3 +71,8 @@
         });
         
       });
+    
+    // crazyegg analytics
+    %script{ type: "text/javascript" }
+      :plain
+        document.write(unescape('%3Cscript type="text/javascript" src="'+document.location.protocol+'//dnn506yrbagrg.cloudfront.net/pages/scripts/0011/5433.js"%3E%3C%2Fscript%3E'))
