welcome crazyegg hacks

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -73,6 +73,6 @@
       });
     
     // crazyegg analytics
-    %script{ type: "text/javascript" }
-      :plain
-        document.write(unescape('%3Cscript type="text/javascript" src="'+document.location.protocol+'//dnn506yrbagrg.cloudfront.net/pages/scripts/0011/5433.js"%3E%3C%2Fscript%3E'))
+    :plain
+      <script type="text/javascript">document.write(unescape('%3Cscript type="text/javascript" src="'+document.location.protocol+'//dnn506yrbagrg.cloudfront.net/pages/scripts/0011/5433.js"%3E%3C%2Fscript%3E'))</script>
+        
