--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -74,6 +74,8 @@
     
     // crazyegg analytics
     #crazyegg{ style: "display: none" }
-    :plain
+    :javascript
+      $(function(){
       $("#crazyegg").html(unescape('%3Cscript type="text/javascript" src="'+document.location.protocol+'//dnn506yrbagrg.cloudfront.net/pages/scripts/0011/5433.js"%3E%3C%2Fscript%3E'))
+      })
         
