--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -247,8 +247,7 @@ a:hover
   padding: 9px 0 9px 1.2%
   
 #inner_content
-  width: 40%
-  float: left
+  width: 100%
   line-height: 17px
   a
     font-weight: bold
@@ -315,6 +314,9 @@ a#profile_name
 #profile_links
   background: #999
    
+#home_right
+  width: 400px
+  float: right
 
 #news
   li
@@ -331,8 +333,9 @@ a#profile_name
     
 #news 
   text-align: right
-  width: 23%
-  float: left
+  width: 360px
+  float: right
+  margin-left: 3%
   font-size: 0.9em
   // background: -moz-linear-gradient(top, #807F7F 0%, #FFFFFF 100%)
   // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#807F7F), color-stop(100%,#FFFFFF))
@@ -598,12 +601,22 @@ ul#selection
       background: #B42C4E
 
 $video_width: 360px
+$video_height: 252px
+$video_home_width: 400px
+$video_home_height: 300px
 #video
   float: right
   margin: 0 2px 5px 15px
   iframe 
     width: $video_width
-    height: 252px
+    height: $video_height
+
+.home #video 
+  float: none
+  iframe
+    width: $video_home_width
+    height: $video_home_height
+    
 
 #aside
   background: $main
