--- a/app/views/elements/_home.haml
+++ b/app/views/elements/_home.haml
@@ -4,7 +4,8 @@
   #home_right
     = parse_text markup("vimeo(22238816)")
     = render partial: "sections/articles"
-  = markup tr(@page).text
+  - text = markup tr(@page).text
+  = parse_text text
 
 -# %div#home_swf
 -#   =# image_tag "oldflash.png"
