--- a/app/views/user_mailer/_style.haml
+++ b/app/views/user_mailer/_style.haml
@@ -1,13 +1,16 @@
 %style{ type: "text/css" }
   :plain
-    p.val {
-      float: left;
+    .val {
+      
       margin-left: 10px;
       font-weight: bold;
     }
-    p.tit, p.tit2 {
-      float: left;
-      clear: left;
+    .tit, .tit2 {
+
+    }
+    
+    .tit.bold {
+      
     }
     
     .user_infos {
@@ -18,6 +21,7 @@
       background: #EEEEEE;
       height: 100%;
       padding: 20px;
+      font-family: Arial;
     }
     
     #container {
@@ -33,6 +37,5 @@
     }
     
     img.logo {
-      float: right;
-      padding-top: 10px
+      width: 70px;
     }
