--- a/app/views/user_mailer/admin_borsa.haml
+++ b/app/views/user_mailer/admin_borsa.haml
@@ -1,52 +1,66 @@
-= render partial: "style"
-    
-#container
-  %img.logo{ src: "http://accademia-cappiello.it/images/logo_small.png" }
+%h2 Nuova richiesta Borsa di studio:
 
-  %h2 Nuova richiesta Borsa di studio:
+%p.tit 
+  Nome: 
+  %span.val= @user.name
 
-  %p.tit Nome: 
-  %p.val= @user.name
+%p.tit 
+  Email: 
+  %span.val= @user.email
 
-  %p.tit Email: 
-  %p.val= @user.email
+%p.tit 
+  Lingua: 
+  %span.val= @user.lang == "it" ? "Italiano" : "Inglese"
 
-  %p.tit Lingua: 
-  %p.val= @user.lang
+%p.tit 
+  Indirizzo: 
+  %span.val= @user.address
 
-  %p.tit Indirizzo: 
-  %p.val= @user.address
+%p.tit 
+  Città: 
+  %span.val= @user.city
 
-  %p.tit Città: 
-  %p.val= @user.city
+%p.tit 
+  CAP: 
+  %span.val= @user.cap
 
-  %p.tit CAP: 
-  %p.val= @user.cap
+%p.tit 
+  Telefono: 
+  %span.val= @user.tel
 
-  %p.tit Telefono: 
-  %p.val= @user.tel
-  
 
-  %p.tit Nato a: 
-  %p.val= @user.birthplace
+%p.tit
+  Nato a: 
+  %span.val= @user.birthplace
 
-  %p.tit Il: 
-  %p.val
+%p.tit 
+  Il: 
+  %span.val
     - unless @user.birthdate.nil?
       = I18n.l @user.birthdate, format: :long 
-  
-  %p.tit Titolo di studio: 
-  %p.val= @user.qualification
 
-  %p.tit Votazione: 
-  %p.val= @user.grade
-  
-  %p.tit Note: 
-  %p.val= @user.notes
+%p.tit 
+  Titolo di studio: 
+  %span.val= @user.qualification
 
-  
-  %p.tit Newsletter: 
-  %p.val= @user.newsletter
+%p.tit 
+  Votazione: 
+  %span.val= @user.grade
 
-      
-  .clear
+%p.tit 
+  Note: 
+  %span.val= @user.notes
+
+
+%p.tit 
+  Newsletter: 
+  %span.val= @user.newsletter ? "Si" : "No"
+
+- infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"] 
+- 5.times do |i|
+  %p.tit.bold #{infos[i]}:
+  %p.val= @user.send("info#{i}")
+
+
+    
+.clear
