--- a/app/views/users/_user_infos.html.haml
+++ b/app/views/users/_user_infos.html.haml
@@ -9,10 +9,18 @@
   %h3 Voglio partecipare a:
 
   - show_selection :int_stage_visual, "Stage Visual Design"
-  - show_selection :int_stage_interior, "Stage Interior Desgin"
+  - show_selection :int_stage_interior, "Stage Interior Design"
   
   - unless @user.interested_in.blank?
   
     %h3 Vorrei ottenere una borsa di studio per:
 
     %p= @user.interested_in
+    
+
+    - infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"] 
+    - 5.times do |i|
+      - val = @user.send("info#{i}")
+      - unless val.blank?
+        %p.tit.bold #{infos[i]}:
+        %p= val
