--- a/app/views/sections/_articles.html.haml
+++ b/app/views/sections/_articles.html.haml
@@ -22,12 +22,8 @@
   %h5 
     %span Lavoro
   .lavoro
-    %ul
-      %li
-        .lavoro_title Cerco
-        %ul 
-          %li - Sezione in allestimento
-      %li
-        .lavoro_title Offro
-        %ul 
-          %li - Sezione in allestimento
+    .box
+      %p.head
+        = link_to "OPPORTUNITA' DI LAVORO", "/works"
+      %p
+        = link_to "L'accademia aiuta i suoi diplomati ad inserirsi nel mondo del lavoro.", "/works"
