--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -924,3 +924,18 @@ form label.error
   position: relative
   top: -5px
   
+
+#content
+  .lavoro 
+    .box
+      background: #222
+      padding: 8px 8px 1px
+      a
+        color: #EEE        
+        text-shadow: none
+      a:hover
+        color: #FFF    
+        background: transparent
+      p.head a  
+        color: $main
+        font-size: 1.4em
