--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -352,7 +352,7 @@ a#profile_name
     text-align: left
     background: #888
     color: #FFF
-    padding: 3px 10px 4px
+    padding: 3px 10px 0
     text-transform: uppercase
     float: right
     +border-radius-top(4px)
@@ -928,7 +928,7 @@ form label.error
 #content
   .lavoro 
     .box
-      background: #222
+      background: #555
       padding: 8px 8px 1px
       a
         color: #EEE        
