--- a/app/views/works/_work.html.haml
+++ b/app/views/works/_work.html.haml
@@ -1,4 +1,5 @@
 %li
-  %p.right= I18n.l(work.created_at.to_date, format: :long)
-  %p= link_to work.name, work
-  %p= link_to work.text[0..200], work
+  - date = I18n.l(work.created_at.to_date, format: :long)
+  %p.date= link_to date, work
+  %p.name= link_to work.name, work
+  %p= link_to work.text[0..200]+"...", work
